# plutoprint

./: .gitignore  LICENSE  README.md  README.rst  __init__.py  meson.build  plutobook-module.c  pyproject.toml
.github/workflows/: main.yml
docker/: manylinux_2_28_x86_64.Dockerfile
docs/: changelog.rst  conf.py  index.rst  installation.rst  reference.rst
docs/api_reference/: canvas.rst  constants.rst  index.rst
fontconfig/: meson.build
lib/pkgconfig/: libcurl.pc
plutoprint/: __init__.py  __init__.pyi  __main__.py  module.c
subprojects/: plutobook.wrap
tests/: meson.build  test_book.py  test_canvas.py  test_enums.py  test_pagemargins.py  test_resourcedata.py  test_resourcefetcher.py  test_units.py
