[project]
name = 'plutoprint'
description = 'Paged HTML rendering library'
readme = 'README.md'
requires-python = '>=3.8'
dynamic = ['version']
license = {file = 'LICENSE'}
authors = [
    {name = 'Samuel Ugochukwu', email = 'sammycageagle@gmail.com'},
]

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']
